--- a/stable/log-agent-rsyslog/templates/daemonset.yaml
+++ b/stable/log-agent-rsyslog/templates/daemonset.yaml
@@ -68,6 +68,9 @@ spec:
         - name: var-docker-log
           mountPath: /var/lib/docker/containers
           readOnly: true
+        - name: kube-apiserver-audit-log
+          mountPath: /var/log/kube-apiserver/audit.log
+          readOnly: true
       terminationGracePeriodSeconds: 600
       volumes:
       - name: rsyslog-config-volume
@@ -101,3 +104,6 @@ spec:
       - name: var-docker-log
         hostPath:
           path: /var/lib/docker/containers
+      - name: kube-apiserver-audit-log
+        hostPath:
+          path: {{ .Values.logs.kubernetesAudit.logPath }}
