--- a/stable/log-agent-rsyslog/ci/mtls-verify-peer-values.yaml
+++ b/stable/log-agent-rsyslog/ci/mtls-verify-peer-values.yaml
@@ -129,3 +129,7 @@ logs:
     enabled: true
     exclude:
       - ""
+
+  kubernetesAudit:
+    enabled: false
+    logPath: "/var/log/kube-apiserver/audit.log"
