--- a/stable/log-agent-rsyslog/values.yaml
+++ b/stable/log-agent-rsyslog/values.yaml
@@ -51,3 +51,7 @@ logs:
     enabled: false
     exclude:
       - ""
+
+  kubernetesAudit:
+    enabled: false
+    logPath: "/var/log/kube-apiserver/audit.log"
