Fix file not found issue
Signed-off-by: Chin-Ya Huang <chin-ya.huang@suse.com>

--- a/stable/log-agent-rsyslog/templates/configmap.yaml
+++ b/stable/log-agent-rsyslog/templates/configmap.yaml
@@ -468,7 +468,7 @@ data:
 
     {{- if ( eq .Values.logs.kubernetesAudit.enabled true ) }}
     input(type="imfile"
-          file="{{ .Values.logs.kubernetesAudit.logPath }}"
+          file="{{ .Values.logs.kubernetesAudit.logDir }}/{{ .Values.logs.kubernetesAudit.logFile }}"
           tag="kubernetesAudit"
           ruleset="forward_logs")
     {{- end }}
