--- a/stable/log-agent-rsyslog/ci/values.yaml
+++ b/stable/log-agent-rsyslog/ci/values.yaml
@@ -54,4 +54,5 @@ logs:
 
   kubernetesAudit:
     enabled: false
-    logPath: "/var/log/kube-apiserver/audit.log"
+    logDir: "/var/log/kube-apiserver"
+    logFile: "audit.log"
