--- a/stable/log-agent-rsyslog/values.yaml
+++ b/stable/log-agent-rsyslog/values.yaml
@@ -53,5 +53,6 @@ logs:
       - ""
 
   kubernetesAudit:
-    enabled: false
-    logPath: "/var/log/kube-apiserver/audit.log"
+    enabled: true
+    logDir: "/var/log/kube-apiserver"
+    logFile: "audit.log"
