Fix variables in ci manifests
Signed-off-by: Chin-Ya Huang <chin-ya.huang@suse.com>

--- a/stable/log-agent-rsyslog/ci/tls-values.yaml
+++ b/stable/log-agent-rsyslog/ci/tls-values.yaml
@@ -80,4 +80,5 @@ logs:
 
   kubernetesAudit:
     enabled: false
-    logPath: "/var/log/kube-apiserver/audit.log"
+    logDir: "/var/log/kube-apiserver"
+    logFile: "audit.log"
