--- a/stable/log-agent-rsyslog/ci/mtls-verify-peer-values.yaml
+++ b/stable/log-agent-rsyslog/ci/mtls-verify-peer-values.yaml
@@ -132,4 +132,5 @@ logs:
 
   kubernetesAudit:
     enabled: false
-    logPath: "/var/log/kube-apiserver/audit.log"
+    logDir: "/var/log/kube-apiserver"
+    logFile: "audit.log"
