Fix container mount
Signed-off-by: Chin-Ya Huang <chin-ya.huang@suse.com>

--- a/stable/log-agent-rsyslog/templates/daemonset.yaml
+++ b/stable/log-agent-rsyslog/templates/daemonset.yaml
@@ -69,7 +69,7 @@ spec:
           mountPath: /var/lib/docker/containers
           readOnly: true
         - name: kube-apiserver-audit-log-dir
-          mountPath: /tmp/kube-apiserver
+          mountPath: {{ .Values.logs.kubernetesAudit.logDir }}
           readOnly: true
       terminationGracePeriodSeconds: 600
       volumes:
