--- a/stable/reloader/Chart.yaml
+++ b/stable/reloader/Chart.yaml
@@ -3,8 +3,8 @@
 apiVersion: v1
 name: reloader
 description: Reloader chart that runs on kubernetes
-version: v0.0.58
-appVersion: v0.0.58
+version: 0.0.58
+appVersion: 0.0.58
 keywords:
   - Reloader
   - kubernetes
