--- a/stable/reloader/values.yaml
+++ b/stable/reloader/values.yaml
@@ -44,10 +44,10 @@ reloader:
     labels:
       provider: stakater
       group: com.stakater.platform
-      version: v0.0.58
+      version: 0.0.58
     image:
-      name: stakater/reloader
-      tag: "v0.0.58"
+      name: registry.suse.com/caasp/v5/reloader
+      tag: "0.0.58"
       pullPolicy: IfNotPresent
     # Support for extra environment variables.
     env:
