Fix to allow custom k8s audit log directory mount
Signed-off-by: Chin-Ya Huang <chin-ya.huang@suse.com>

--- a/stable/log-agent-rsyslog/templates/podsecuritypolicy.yaml
+++ b/stable/log-agent-rsyslog/templates/podsecuritypolicy.yaml
@@ -31,3 +31,5 @@ spec:
         readOnly: true
       - pathPrefix: /run
         readOnly: true
+      - pathPrefix: {{ .Values.logs.kubernetesAudit.logDir }}
+        readOnly: true
