Enable K8s audit log forwarding by default
Signed-off-by: Chin-Ya Huang <chin-ya.huang@suse.com>

--- a/stable/log-agent-rsyslog/values.yaml
+++ b/stable/log-agent-rsyslog/values.yaml
@@ -53,6 +53,6 @@ logs:
       - ""
 
   kubernetesAudit:
-    enabled: false
+    enabled: true
     logDir: "/var/log/kube-apiserver"
     logFile: "audit.log"
