--- a/stable/kubecf/Chart.yaml
+++ b/stable/kubecf/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-appVersion: 2.0.0-rc3
+appVersion: 2.0.0
 description: A Helm chart for KubeCF
 icon: https://raw.githubusercontent.com/cloudfoundry-incubator/kubecf/master/icon/kubecf.png
 name: kubecf
