--- a/stable/velero/values.yaml
+++ b/stable/velero/values.yaml
@@ -5,8 +5,11 @@
 # Details of the container image to use in the Velero deployment & daemonset (if
 # enabling restic). Required.
 image:
-  repository: registry.suse.com/caasp/v4/velero
-  tag: 1.3.1
+  repository: velero/velero
+  tag: v1.4.0
+  # Digest value example: sha256:d238835e151cec91c6a811fe3a89a66d3231d9f64d09e5f3c49552672d271f38. If used, it will
+  # take precedence over the image.tag.
+  # digest:
   pullPolicy: IfNotPresent
 
 # Annotations to add to the Velero deployment's pod template. Optional.
@@ -22,7 +25,7 @@ resources: {}
 # Init containers to add to the Velero deployment's pod spec. At least one plugin provider image is required.
 initContainers: []
   # - name: velero-plugin-for-aws
-  #   image: registry.suse.com/caasp/v4/velero-plugin-for-aws:1.0.1
+  #   image: velero/velero-plugin-for-aws:v1.1.0
   #   imagePullPolicy: IfNotPresent
   #   volumeMounts:
   #     - mountPath: /target
@@ -61,6 +64,9 @@ metrics:
     enabled: false
     additionalLabels: {}
 
+# Install CRDs as a templates. Enabled by default.
+installCRDs: true
+
 ##
 ## End of deployment-related settings.
 ##
@@ -80,6 +86,9 @@ configuration:
     # Cloud provider where backups should be stored. Usually should
     # match `configuration.provider`. Required.
     name:
+    # Provider for the backup storage location. If omitted
+    # `configuration.provider` will be used instead.
+    provider:
     # Bucket to store backups in. Required.
     bucket:
     # Prefix within bucket under which to store backups. Optional.
@@ -106,6 +115,9 @@ configuration:
     # Cloud provider where volume snapshots are being taken. Usually
     # should match `configuration.provider`. Required.,
     name:
+    # Provider for the backup storage location. If omitted
+    # `configuration.provider` will be used instead.
+    provider:
     # Additional provider-specific configuration. See link above
     # for details of required/optional fields for your provider.
     config: {}
@@ -133,6 +145,9 @@ configuration:
 
   # additional key/value pairs to be used as environment variables such as "AWS_CLUSTER_NAME: 'yourcluster.domain.tld'"
   extraEnvVars: {}
+
+  # Comma separated list of velero feature flags. default: empty
+  features:
 
   # Set log-level for Velero pod. Default: info. Other options: debug, warning, error, fatal, panic.
   logLevel:
@@ -177,6 +192,8 @@ credentials:
   # true and `existingSecret` is empty. This should be the contents
   # of your IAM credentials file.
   secretContents: {}
+  # additional key/value pairs to be used as environment variables such as "DIGITALOCEAN_TOKEN: <your-key>". Values will be stored in the secret.
+  extraEnvVars: {}
 
 # Whether to create backupstoragelocation crd, if false => do not create a default backup location
 backupsEnabled: true
@@ -220,13 +237,15 @@ restic:
 schedules: {}
 
 # Velero ConfigMaps.
-configMaps:
-  restic-restore-action-config:
-    labels:
-      velero.io/plugin-config: ""
-      velero.io/restic: RestoreItemAction
-    data:
-      image: registry.suse.com/caasp/v4/velero-restic-restore-helper:1.3.1
+# Eg:
+# configMaps:
+#   restic-restore-action-config:
+#     labels:
+#       velero.io/plugin-config: ""
+#       velero.io/restic: RestoreItemAction
+#     data:
+#       image: velero/velero-restic-restore-helper:v1.3.1
+configMaps: {}
 
 ##
 ## End of additional Velero resource settings.
