--- a/stable/velero/values.yaml
+++ b/stable/velero/values.yaml
@@ -5,8 +5,8 @@
 # Details of the container image to use in the Velero deployment & daemonset (if
 # enabling restic). Required.
 image:
-  repository: velero/velero
-  tag: v1.4.0
+  repository: registry.suse.com/caasp/v4/velero
+  tag: 1.3.1
   # Digest value example: sha256:d238835e151cec91c6a811fe3a89a66d3231d9f64d09e5f3c49552672d271f38. If used, it will
   # take precedence over the image.tag.
   # digest:
@@ -25,7 +25,7 @@ resources: {}
 # Init containers to add to the Velero deployment's pod spec. At least one plugin provider image is required.
 initContainers: []
   # - name: velero-plugin-for-aws
-  #   image: velero/velero-plugin-for-aws:v1.1.0
+  #   image: registry.suse.com/caasp/v4/velero-plugin-for-aws:1.0.1
   #   imagePullPolicy: IfNotPresent
   #   volumeMounts:
   #     - mountPath: /target
@@ -237,15 +237,13 @@ restic:
 schedules: {}
 
 # Velero ConfigMaps.
-# Eg:
-# configMaps:
-#   restic-restore-action-config:
-#     labels:
-#       velero.io/plugin-config: ""
-#       velero.io/restic: RestoreItemAction
-#     data:
-#       image: velero/velero-restic-restore-helper:v1.3.1
-configMaps: {}
+configMaps:
+  restic-restore-action-config:
+    labels:
+      velero.io/plugin-config: ""
+      velero.io/restic: RestoreItemAction
+    data:
+      image: registry.suse.com/caasp/v4/velero-restic-restore-helper:1.3.1
 
 ##
 ## End of additional Velero resource settings.
