--- a/stable/nginx-ingress/Chart.yaml
+++ b/stable/nginx-ingress/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 name: nginx-ingress
-version: 0.28.4
+version: 1.41.2
 appVersion: 0.15.0
 home: https://github.com/kubernetes/ingress-nginx
 description: An nginx Ingress controller that uses ConfigMap to store the nginx configuration.
@@ -11,11 +11,8 @@ keywords:
 sources:
   - https://github.com/kubernetes/ingress-nginx
 maintainers:
-  - name: jackzampolin
-    email: jack.zampolin@gmail.com
-  - name: mgoodness
-    email: mgoodness@gmail.com
-  - name: chancez
-    email: chance.zibolski@coreos.com
+  - name: ChiefAlexander
+  - name: taharah
+    email: Trevor.G.Wood@gmail.com
 engine: gotpl
 kubeVersion: ">=1.10.0-0"
