--- a/stable/nginx-ingress/templates/default-backend-rolebinding.yaml
+++ b/stable/nginx-ingress/templates/default-backend-rolebinding.yaml
@@ -1,19 +1,19 @@
-{{- if and (.Values.rbac.create) (not .Values.rbac.scope) -}}
+{{- if and .Values.rbac.create .Values.podSecurityPolicy.enabled .Values.defaultBackend.enabled -}}
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
+kind: RoleBinding
 metadata:
   labels:
     app: {{ template "nginx-ingress.name" . }}
     chart: {{ template "nginx-ingress.chart" . }}
     heritage: {{ .Release.Service }}
     release: {{ template "nginx-ingress.releaseLabel" . }}
-  name: {{ template "nginx-ingress.fullname" . }}
+  name: {{ template "nginx-ingress.fullname" . }}-backend
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: {{ template "nginx-ingress.fullname" . }}
+  kind: Role
+  name: {{ template "nginx-ingress.fullname" . }}-backend
 subjects:
   - kind: ServiceAccount
-    name: {{ template "nginx-ingress.serviceAccountName" . }}
+    name: {{ template "nginx-ingress.defaultBackend.serviceAccountName" . }}
     namespace: {{ .Release.Namespace }}
 {{- end -}}
