--- a/stable/nginx-ingress/templates/default-backend-serviceaccount.yaml
+++ b/stable/nginx-ingress/templates/default-backend-serviceaccount.yaml
@@ -1,14 +1,11 @@
-{{- if .Values.udp }}
+{{- if and .Values.defaultBackend.enabled  .Values.defaultBackend.serviceAccount.create }}
 apiVersion: v1
-kind: ConfigMap
+kind: ServiceAccount
 metadata:
   labels:
     app: {{ template "nginx-ingress.name" . }}
     chart: {{ template "nginx-ingress.chart" . }}
-    component: "{{ .Values.controller.name }}"
     heritage: {{ .Release.Service }}
     release: {{ template "nginx-ingress.releaseLabel" . }}
-  name: {{ template "nginx-ingress.fullname" . }}-udp
-data:
-{{ tpl (toYaml .Values.udp) . | indent 2 }}
+  name: {{ template "nginx-ingress.defaultBackend.serviceAccountName" . }}
 {{- end }}
