Provide the new nginx-controller images
Signed-off-by: Manuel Buil <mbuil@suse.com>

--- a/stable/nginx-ingress/values.yaml
+++ b/stable/nginx-ingress/values.yaml
@@ -4,8 +4,8 @@
 controller:
   name: controller
   image:
-    repository: registry.suse.com/sles12/nginx-ingress-controller
-    tag: "0.15.0"
+    repository: registry.suse.de/devel/caasp/4.5/containers/containers/caasp/v4.5/ingress-nginx-controller
+    tag: "0.15.0-rev1"
     pullPolicy: IfNotPresent
     runAsUser: 33
 
@@ -448,8 +448,8 @@ defaultBackend:
 
   name: default-backend
   image:
-    repository: registry.suse.com/sles12/default-http-backend
-    tag: "0.15.0"
+    repository: registry.suse.de/devel/caasp/4.5/containers/containers/caasp/v4.5/default-http-backend
+    tag: "0.15.0-rev1"
     pullPolicy: IfNotPresent
 
   # This will fix the issue of HPA not being able to read the metrics.
