--- a/stable/nginx-ingress/values.yaml
+++ b/stable/nginx-ingress/values.yaml
@@ -4,8 +4,8 @@
 controller:
   name: controller
   image:
-    repository: registry.suse.com/sles12/nginx-ingress-controller
-    tag: "0.15.0"
+    repository: registry.suse.com/caasp/v4.5/ingress-nginx-controller
+    tag: "0.15.0-rev2"
     pullPolicy: IfNotPresent
     runAsUser: 33
 
@@ -23,7 +23,8 @@ controller:
     https: 443
 
   # Will add custom configuration options to Nginx https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/configmap/
-  config: {}
+  config:
+    use-geoip: "false"
 
   # Maxmind license key to download GeoLite2 Databases
   # https://blog.maxmind.com/2019/12/18/significant-changes-to-accessing-and-using-geolite2-databases
@@ -448,8 +449,8 @@ defaultBackend:
 
   name: default-backend
   image:
-    repository: registry.suse.com/sles12/default-http-backend
-    tag: "0.15.0"
+    repository: registry.suse.com/caasp/v4.5/default-http-backend
+    tag: "0.15.0-rev1"
     pullPolicy: IfNotPresent
 
   # This will fix the issue of HPA not being able to read the metrics.
