--- a/stable/cert-manager/values.yaml
+++ b/stable/cert-manager/values.yaml
@@ -39,7 +39,7 @@ strategy: {}
 featureGates: ""
 
 image:
-  repository: registry.suse.com/caasp/v5/cert-manager-controller
+  repository: registry.suse.com/caasp/v4.5/cert-manager-controller
   # Override the image tag to deploy by setting this variable.
   # If no value is set, the chart's appVersion will be used.
   tag: 0.15.1
@@ -190,7 +190,7 @@ webhook:
   tolerations: []
 
   image:
-    repository: registry.suse.com/caasp/v5/cert-manager-webhook
+    repository: registry.suse.com/caasp/v4.5/cert-manager-webhook
     # Override the image tag to deploy by setting this variable.
     # If no value is set, the chart's appVersion will be used.
     tag: 0.15.1
@@ -245,7 +245,7 @@ cainjector:
   tolerations: []
 
   image:
-    repository: registry.suse.com/caasp/v5/cert-manager-cainjector
+    repository: registry.suse.com/caasp/v4.5/cert-manager-cainjector
     # Override the image tag to deploy by setting this variable.
     # If no value is set, the chart's appVersion will be used.
     tag: 0.15.1
