--- a/stable/console/templates/database.yaml
+++ b/stable/console/templates/database.yaml
@@ -57,9 +57,11 @@ spec:
 {{- end }}
       containers:
       - name: mariadb
-        image: {{.Values.kube.registry.hostname}}/{{.Values.kube.organization}}/{{.Values.images.mariadb}}:3.2.1-566e233b1-cap
+        image: {{.Values.kube.registry.hostname}}/{{.Values.kube.organization}}/{{.Values.images.mariadb}}:4.0.0-f2e1d4d13-cap
         imagePullPolicy: {{.Values.imagePullPolicy}}
         env:
+        - name: STRATOS_IMAGE_REF
+          value: "4.0.0-f2e1d4d13-cap:{{ .Release.Revision }}"
         - name: MYSQL_ROOT_PASSWORD
           valueFrom:
             secretKeyRef:
