--- a/stable/console/templates/deployment.yaml
+++ b/stable/console/templates/deployment.yaml
@@ -54,7 +54,7 @@ spec:
 {{- end }}
 {{- end }}
       containers:
-      - image: {{.Values.kube.registry.hostname}}/{{.Values.kube.organization}}/{{.Values.images.console}}:3.2.1-566e233b1-cap
+      - image: {{.Values.kube.registry.hostname}}/{{.Values.kube.organization}}/{{.Values.images.console}}:4.0.0-f2e1d4d13-cap
         imagePullPolicy: {{.Values.imagePullPolicy}}
         name: ui
         ports:
@@ -65,16 +65,20 @@ spec:
           name: https
           protocol: TCP
         env:
+        - name: STRATOS_IMAGE_REF
+          value: "4.0.0-f2e1d4d13-cap:{{ .Release.Revision }}"
         - name: CONSOLE_CERT_PATH
           value: "/{{ .Release.Name }}-cert-volume"
         volumeMounts:
         - mountPath: "/{{ .Release.Name }}-cert-volume"
           name: "{{ .Release.Name }}-cert-volume"
           readOnly: true
-      - image: {{.Values.kube.registry.hostname}}/{{.Values.kube.organization}}/{{.Values.images.proxy}}:3.2.1-566e233b1-cap
+      - image: {{.Values.kube.registry.hostname}}/{{.Values.kube.organization}}/{{.Values.images.proxy}}:4.0.0-f2e1d4d13-cap
         imagePullPolicy: {{.Values.imagePullPolicy}}
         name: proxy
         env:
+        - name: STRATOS_IMAGE_REF
+          value: "4.0.0-f2e1d4d13-cap:{{ .Release.Revision }}"
         - name: STRATOS_HELM_RELEASE
           value: "{{ .Release.Name }}"
         - name: DB_USER
@@ -277,16 +281,7 @@ spec:
         - name: UI_LIST_ALLOW_LOAD_MAXED
           value: {{ default "false" .Values.console.ui.listAllowLoadMaxed | quote }}
         {{- end }}
-        - name: MONOCULAR_CRT_PATH
-          value: "/etc/monocular-certs/tls.crt"
-        - name: MONOCULAR_KEY_PATH
-          value: "/etc/monocular-certs/tls.key"
-        - name: MONOCULAR_CA_CRT_PATH
-          value: "/etc/monocular-certs/ca.crt"
-        - name: FDB_URL
-          value: "mongodb://{{ .Release.Name }}-fdbdoclayer:27016"
-        - name: SYNC_SERVER_URL
-          value: "http://{{ .Release.Name }}-chartsync:8080"
+        {{- include "stratosJetstreamEnv" . | indent 8 }}
         readinessProbe:
           httpGet:
             path: /pp/v1/ping
@@ -317,6 +312,9 @@ spec:
       {{- if and .Values.kube.registry.username .Values.kube.registry.password }}
       imagePullSecrets:
       - name: {{.Values.dockerRegistrySecret}}
+      {{- end }}
+      {{- if and (eq (printf "%s" .Values.kube.auth) "rbac") (.Capabilities.APIVersions.Has "rbac.authorization.k8s.io/v1") }}
+      serviceAccountName: "stratos"
       {{- end }}
       volumes:
       - name: "{{ .Release.Name }}-encryption-key-volume"
