--- a/stable/console/templates/fdbdoclayer/deployment.yaml
+++ b/stable/console/templates/fdbdoclayer/deployment.yaml
@@ -49,9 +49,11 @@ spec:
 {{- end }}
       containers:
       - name: fdbdoclayer
-        image: {{.Values.kube.registry.hostname}}/{{.Values.kube.organization}}/{{.Values.images.fdbdoclayer}}:3.2.1-566e233b1-cap
+        image: {{.Values.kube.registry.hostname}}/{{.Values.kube.organization}}/{{.Values.images.fdbdoclayer}}:4.0.0-f2e1d4d13-cap
         imagePullPolicy: {{.Values.imagePullPolicy}}
         env:
+        - name: STRATOS_IMAGE_REF
+          value: "4.0.0-f2e1d4d13-cap:{{ .Release.Revision }}"
         - name: FDB_COORDINATOR
           value: {{ .Release.Name }}-fdbdoclayer
         - name: FDB_LISTEN_IP
@@ -84,10 +86,17 @@ spec:
         - name: certs
           mountPath: "/etc/secrets"
           readOnly: true
+        resources:
+          limits:
+            memory: 384Mi
+          requests:
+            memory: 256Mi
       - name: fdbserver
-        image: {{.Values.kube.registry.hostname}}/{{.Values.kube.organization}}/{{.Values.images.fdbserver}}:3.2.1-566e233b1-cap
+        image: {{.Values.kube.registry.hostname}}/{{.Values.kube.organization}}/{{.Values.images.fdbserver}}:4.0.0-f2e1d4d13-cap
         imagePullPolicy: {{.Values.imagePullPolicy}}
         env:
+        - name: STRATOS_IMAGE_REF
+          value: "4.0.0-f2e1d4d13-cap:{{ .Release.Revision }}"
         - name: FDB_COORDINATOR
           value: {{ .Release.Name }}-fdbdoclayer
         - name: FDB_LISTEN_IP
