--- a/stable/velero/values.yaml
+++ b/stable/velero/values.yaml
@@ -5,7 +5,7 @@
 # Details of the container image to use in the Velero deployment & daemonset (if
 # enabling restic). Required.
 image:
-  repository: registry.suse.com/caasp/v4/velero
+  repository: registry.suse.com/caasp/v4.5/velero
   tag: 1.3.1
   # Digest value example: sha256:d238835e151cec91c6a811fe3a89a66d3231d9f64d09e5f3c49552672d271f38. If used, it will
   # take precedence over the image.tag.
@@ -25,7 +25,7 @@ resources: {}
 # Init containers to add to the Velero deployment's pod spec. At least one plugin provider image is required.
 initContainers: []
   # - name: velero-plugin-for-aws
-  #   image: registry.suse.com/caasp/v4/velero-plugin-for-aws:1.0.1
+  #   image: registry.suse.com/caasp/v4.5/velero-plugin-for-aws:1.0.1
   #   imagePullPolicy: IfNotPresent
   #   volumeMounts:
   #     - mountPath: /target
@@ -243,7 +243,7 @@ configMaps:
       velero.io/plugin-config: ""
       velero.io/restic: RestoreItemAction
     data:
-      image: registry.suse.com/caasp/v4/velero-restic-restore-helper:1.3.1
+      image: registry.suse.com/caasp/v4.5/velero-restic-restore-helper:1.3.1
 
 ##
 ## End of additional Velero resource settings.
