--- a/stable/console/values.yaml
+++ b/stable/console/values.yaml
@@ -1,5 +1,5 @@
 # Tag for images - do not edit
-consoleVersion: 4.0.0-f2e1d4d13-cap
+consoleVersion: 4.0.1-97ac8e623-cap
 dockerRegistrySecret: regsecret
 
 # Provide Proxy settings if required
@@ -118,6 +118,10 @@ console:
 
   # Do not use a persistent volume for analysis reports
   reportsVolumeDisabled: false
+
+  # ssl protocols and ciphers overrides - leave empty for defaults
+  sslProtocols:
+  sslCiphers:
   
 images:
   console: stratos-console
