--- a/stable/cf-operator/Chart.yaml
+++ b/stable/cf-operator/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-appVersion: 2.0.1-rc1
+appVersion: 2.0.1
 description: A Helm chart for cf-operator, the k8s operator for deploying BOSH releases
 home: https://github.com/cloudfoundry-incubator/cf-operator
 icon: https://cloudfoundry-incubator.github.io/quarks-helm/logo.png
@@ -16,4 +16,4 @@ sources:
 - https://github.com/cloudfoundry-incubator/cf-operator
 - https://github.com/cloudfoundry-incubator/quarks-job
 - https://github.com/cfcontainerizationbot/cf-operator-base
-version: 4.5.13+0.gd4738712-rc1
+version: 4.5.13+0.gd4738712
