--- a/stable/kubecf/Chart.yaml
+++ b/stable/kubecf/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
-appVersion: 2.0.1-rc1
+appVersion: 2.0.1
 description: A Helm chart for KubeCF
 icon: https://raw.githubusercontent.com/cloudfoundry-incubator/kubecf/master/icon/kubecf.png
 name: kubecf
-version: 2.2.3-rc1
+version: 2.2.3
