--- a/stable/velero/templates/clusterrolebinding-crds.yaml
+++ b/stable/velero/templates/clusterrolebinding-crds.yaml
@@ -1,10 +1,12 @@
-{{- if and .Values.rbac.create .Values.rbac.clusterAdministrator }}
+{{- if .Values.rbac.create }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ include "velero.fullname" . }}-server
+  name: {{ include "velero.fullname" . }}-crds
+  annotations:
+    "helm.sh/hook": pre-install,pre-upgrade,pre-delete
+    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
   labels:
-    app.kubernetes.io/component: server
     app.kubernetes.io/name: {{ include "velero.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
@@ -12,9 +14,9 @@ metadata:
 subjects:
   - kind: ServiceAccount
     namespace: {{ .Release.Namespace }}
-    name: {{ include "velero.serverServiceAccount" . }}
+    name: {{ include "velero.crdsServiceAccount" . }}
 roleRef:
   kind: ClusterRole
-  name: cluster-admin
+  name: {{ include "velero.fullname" . }}-crds
   apiGroup: rbac.authorization.k8s.io
 {{- end }}
