--- a/stable/velero/Chart.yaml
+++ b/stable/velero/Chart.yaml
@@ -1,21 +1,21 @@
 apiVersion: v1
-appVersion: 1.3.1
+appVersion: 1.4.2
 description: A Helm chart for velero
+name: velero
+version: 2.13.0
 home: https://github.com/vmware-tanzu/velero
 icon: https://cdn-images-1.medium.com/max/1600/1*-9mb3AKnKdcL_QD3CMnthQ.png
-maintainers:
-- email: ashisham@vmware.com
-  name: ashish-amarnath
-- email: carlisiac@vmware.com
-  name: carlisia
-- email: ctadeu@gmail.com
-  name: cpanato
-- email: brubakern@vmware.com
-  name: nrb
-- email: krisss@vmware.com
-  name: skriss
-name: velero
 sources:
 - https://github.com/vmware-tanzu/velero
-tillerVersion: '>=2.10.0'
-version: 2.12.2
+maintainers:
+  - name: ashish-amarnath
+    email: ashisham@vmware.com
+  - name: carlisia
+    email: carlisiac@vmware.com
+  - name: cpanato
+    email: ctadeu@gmail.com
+  - name: nrb
+    email: brubakern@vmware.com
+  - name: skriss
+    email: krisss@vmware.com
+tillerVersion: ">=2.10.0"
