--- a/stable/velero/values.yaml
+++ b/stable/velero/values.yaml
@@ -6,7 +6,7 @@
 # enabling restic). Required.
 image:
   repository: registry.suse.com/caasp/v4.5/velero
-  tag: 1.3.1
+  tag: 1.4.2
   # Digest value example: sha256:d238835e151cec91c6a811fe3a89a66d3231d9f64d09e5f3c49552672d271f38. If used, it will
   # take precedence over the image.tag.
   # digest:
@@ -19,13 +19,17 @@ image:
 #  iam.amazonaws.com/role: arn:aws:iam::<AWS_ACCOUNT_ID>:role/<VELERO_ROLE_NAME>
 podAnnotations: {}
 
+# Additional pod labels for Velero deployment's template. Optional
+# ref: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
+podLabels: {}
+
 # Resource requests/limits to specify for the Velero deployment. Optional.
 resources: {}
 
 # Init containers to add to the Velero deployment's pod spec. At least one plugin provider image is required.
 initContainers: []
   # - name: velero-plugin-for-aws
-  #   image: registry.suse.com/caasp/v4.5/velero-plugin-for-aws:1.0.1
+  #   image: registry.suse.com/caasp/v4.5/velero-plugin-for-aws:1.1.0
   #   imagePullPolicy: IfNotPresent
   #   volumeMounts:
   #     - mountPath: /target
@@ -40,6 +44,9 @@ securityContext: {}
 # Tolerations to use for the Velero deployment. Optional.
 tolerations: []
 
+# Affinity to use for the Velero deployment. Optional.
+affinity: {}
+
 # Node selector to use for the Velero deployment. Optional.
 nodeSelector: {}
 
@@ -52,17 +59,12 @@ extraVolumeMounts: []
 # Settings for Velero's prometheus metrics. Enabled by default.
 metrics:
   enabled: true
-  scrapeInterval: 30s
 
   # Pod annotations for Prometheus
   podAnnotations:
     prometheus.io/scrape: "true"
     prometheus.io/port: "8085"
     prometheus.io/path: "/metrics"
-
-  serviceMonitor:
-    enabled: false
-    additionalLabels: {}
 
 # Install CRDs as a templates. Enabled by default.
 installCRDs: true
@@ -81,17 +83,19 @@ configuration:
   provider:
 
   # Parameters for the `default` BackupStorageLocation. See
-  # https://velero.io/docs/v1.0.0/api-types/backupstoragelocation/
+  # https://velero.io/docs/v1.4/api-types/backupstoragelocation/
   backupStorageLocation:
-    # Cloud provider where backups should be stored. Usually should
-    # match `configuration.provider`. Required.
+    # name is the name of the backup storage location where backups should be stored. If a name is not provided,
+    # a backup storage location will be created with the name "default". Optional.
     name:
-    # Provider for the backup storage location. If omitted
+    # provider is the name for the backup storage location provider. If omitted
     # `configuration.provider` will be used instead.
     provider:
-    # Bucket to store backups in. Required.
+    # bucket is the name of the bucket to store backups in. Required.
     bucket:
-    # Prefix within bucket under which to store backups. Optional.
+    # caCert defines a base64 encoded CA bundle to use when verifying TLS connections to the provider.
+    caCert:
+    # prefix is the directory under which all Velero data should be stored within the bucket. Optional.
     prefix:
     # Additional provider-specific configuration. See link above
     # for details of required/optional fields for your provider.
@@ -110,12 +114,11 @@ configuration:
     #  serviceAccount:
 
   # Parameters for the `default` VolumeSnapshotLocation. See
-  # https://velero.io/docs/v1.0.0/api-types/volumesnapshotlocation/
+  # https://velero.io/docs/v1.4/api-types/volumesnapshotlocation/
   volumeSnapshotLocation:
-    # Cloud provider where volume snapshots are being taken. Usually
-    # should match `configuration.provider`. Required.,
+    # name is the name of the volume snapshot location where snapshots are being taken. Required.
     name:
-    # Provider for the backup storage location. If omitted
+    # provider is the name for the volume snapshot provider. If omitted
     # `configuration.provider` will be used instead.
     provider:
     # Additional provider-specific configuration. See link above
@@ -172,6 +175,10 @@ rbac:
 
 # Information about the Kubernetes service account Velero uses.
 serviceAccount:
+  crds:
+    create: true
+    name:
+    annotations:
   server:
     create: true
     name:
@@ -229,6 +236,8 @@ restic:
 # Eg:
 # schedules:
 #   mybackup:
+#      labels:
+#        myenv: foo
 #     schedule: "0 0 * * *"
 #     template:
 #       ttl: "240h"
@@ -243,7 +252,7 @@ configMaps:
       velero.io/plugin-config: ""
       velero.io/restic: RestoreItemAction
     data:
-      image: registry.suse.com/caasp/v4.5/velero-restic-restore-helper:1.3.1
+      image: registry.suse.com/caasp/v4.5/velero-restic-restore-helper:1.4.2
 
 ##
 ## End of additional Velero resource settings.
