--- a/stable/rook-ceph/Chart.yaml
+++ b/stable/rook-ceph/Chart.yaml
@@ -1,4 +1,4 @@
-#!BuildTag: rook-ceph:1.4.3_git8.gdf5abd53-0
+#!BuildTag: rook-ceph:1.4.3_git19.g7aac50e2-4.1
 apiVersion: v1
 appVersion: v1.4.3
 kubeVersion: ">=1.11"
