--- a/stable/metrics/Chart.yaml
+++ b/stable/metrics/Chart.yaml
@@ -1,8 +1,20 @@
 apiVersion: v1
 appVersion: 2.0.0
 description: A Helm chart for Stratos Metrics
+home: https://stratos.app
 icon: https://raw.githubusercontent.com/SUSE/stratos-metrics/master/icon.svg
+keywords:
+- Stratos
+- Cloud Foundry
+- Kubernetes
+- Helm
+- Monitoring
+- Prometheus
+- Metrics
+maintainers:
+- email: stratos-maintainers@suse.de
+  name: Stratos Maintainers
 name: metrics
 sources:
 - https://github.com/SUSE/stratos-metrics
-version: 1.2.1
+version: 1.3.0
